# projeto_marketing_analytics

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a1b04d50e118_create_logs_pipelines_table.py
src/: main.py
src/core/: database.py  settings.py
src/models/: base.py  logger.py
src/pipelines/olist/: extract.py
src/pipelines/telco/: extract.py  load.py  pipeline.py  transform.py
