[project]
name = "projeto-marketing-analytics"
version = "0.1.0"
description = "Fullstack data project for LTV and Chrun prediction "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=18.0.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "taskipy>=1.14.1",
    "testcontainers>=4.12.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['alembic', 'services']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'uv run ruff check'
pre_format = 'uv run ruff check --fix'
format = 'uv run ruff format'
pre_test = 'task pre_format'
test = 'pytest -s -x --cov=app -vv'
post_test = 'uv run coverage html'
